app/(pages)/(index-page)/_components/Landing/_components/Grass/Grass.module.scss
@use 'app/(pages)/_globals/mixins';
$mobile-breakpoint: 425px;
$tablet-breakpoint: 1007px;
$bg-color: var(--landing-bg);

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: transparent;
  width: 100%;
}
.grass{
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100%;
  height: auto;
  overflow: hidden;

  &_far{
    display: flex;
    position: absolute;
    width: 101%;
    height: auto;
    overflow: hidden;
    margin-left: -1%;
    // margin-top: -10%;
  }
  
  &_medium{
    display: flex;
    position: relative;
    width: 101%;
    height: auto;
    overflow: hidden;
    margin-top: 7%;
    margin-left: -1%;
  }

}

.grasses{
  &_image{
      // border: 1px solid red; 
      object-fit: contain;
      width: 100%;
      height: 100%;
      position: relative;
  }
}

.foreground{
  margin-top: -20%;
  // border: 10px solid red;
}

.polaroids{
  z-index: 20;
  margin-top: -25%; 
  min-width: 0;
}

@media (max-width: $tablet-breakpoint){
  .grass{
    min-width: $tablet-breakpoint;
    &_far{
      min-width: $tablet-breakpoint;
    }

    &_medium{
      min-width: $tablet-breakpoint;
    }
  }
  .polaroids{
    width: 100vw;
  }
  
}

